map: resolved the issue with the hidden map showing as whitespace on the web page by amending the button.js function

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ Footer */
 /* Summary boxes */
 
 .hideme {
-    display: none;
+    display: none !important;
 }
 
 /* form */
